fixing sticky on tablet

--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -236,6 +236,7 @@
       }
     }
     .si_nav {
+      top:60px;
       .container {
         padding: 0 40px;
         .si_nav_box {
